--- a/templates/four_zero_four.html
+++ b/templates/four_zero_four.html
@@ -18,22 +18,10 @@
     </head>
 
 <body>
-    <div class = card>
-        <h3 class = "card-title">{title}</h3>
-        <div class = "card-content" >
-            <p>{details}</p>
-            <div class = "icon-container">
-            <a href = "delete/{id}" class = "icon-click"> 
-                <img src="/img\trash-2.png">
-            </a>
-            <a href = "edit/{id}" class = "icon-click"> 
-                <img src="/img\file-edit.png">
-            </a>
-            </div>
-        </div>
-        
+    <div class = "error">
+        <h1 class = "error-title">ERROR 404</h1>
+        <h3 class = "error-sub">PAGE NOT FOUND</h3>
     </div>
-    <script type="text/javascript" src="getit.js"></script>
 </body>
 
 </html>
